--- a/panel/css/panel.css
+++ b/panel/css/panel.css
@@ -1,11 +1,22 @@
 body{background: url(../../imagenes/background1_1.png);}
 
+header .cuadro{height: 50px; background: white;}
+
 #menu nav ul{padding: 0; list-style: none;}
 #menu nav ul li{text-align: center;}
 #menu nav ul li.active{background-color: #fff;}
+#menu nav ul li a{ display: block; padding: 20px 10px;}
+#menu nav ul li a > i{ font-size: 22px;}
+
+.contenido{ margin: 0 50px 100px;}
+.contenido h3{ margin-top: 0;}
 
 .content-white{background-color: #fff;}
 .content-menu{padding: 0;}
+
+.espacios{ margin:20px 0;}
+.form-group{ width: 60%;}
+textarea{width: 100%; height: 150px;}
 
 @media (max-width: 991px){
   
