--- a/panel/css/panel.css
+++ b/panel/css/panel.css
@@ -8,7 +8,7 @@ header .cuadro{height: 50px; background: white;}
 #menu nav ul li a{ display: block; padding: 20px 10px;}
 #menu nav ul li a > i{ font-size: 22px;}
 
-.contenido{ margin: 0 auto; width: 85%;}
+.contenido{ margin: 0 auto; width: 85%; margin-bottom: 50px;}
 .contenido h3{ margin-top: 0;}
 
 .content-white{background-color: #fff;}
